--- a/process.env
+++ b/process.env
@@ -3,4 +3,6 @@ DB_PORT=3306
 DB_USER=altan
 DB_PASSWORD=Alex998863-_
 DB_NAME=users
-PORT=3000
+PORT=5000
+JWT_SECRET=your-super-secret-jwt-key-here-please-change-in-production
+MONGO_URI=mongodb://localhost:27017/altanian-game
