UPDATE: login issues

--- a/process.env
+++ b/process.env
@@ -5,4 +5,4 @@ DB_PASSWORD=Alex998863-_
 DB_NAME=users
 PORT=5000
 JWT_SECRET=your-super-secret-jwt-key-here-please-change-in-production
-MONGO_URI=mongodb://localhost:27017/altanian-game
+MONGO_URI=mongodb+srv://altania:Espresso1980-_@cluster0.xoovmdk.mongodb.net/altanian-game?retryWrites=true
